@@ -17,8 +17,8 @@ class Class1 implements Foo { byte b; long l; };
 class Class1;
 class Class1 implements Foo { long l; };
 
-local class Class2 implements Foo { byte b; };
-local class Class2;
-local class Class2 implements Foo { byte b; };
+class Class2 implements Foo { byte b; };
+class Class2;
+class Class2 implements Foo { byte b; };
 
 };
