@@ -14,7 +14,7 @@ module Test
 
 interface i1 {};
 
-local interface i2 extends i1 {};	// OK
+local interface i2 extends i1 {};	// error
 
 interface i3 extends i2 {};		// error
 
